--- a/src/contact.html
+++ b/src/contact.html
@@ -77,17 +77,17 @@
 					</div>
 					<div class="col-md-3 content contact-img">
 						<a href="https://tokopedia.link/sm7pbzMh9eb" target="_blank">
-							<img src="../images/contact/tokopedia.svg" alt="tokopedia">
+							<img src="images/contact/tokopedia.svg" alt="tokopedia">
 						</a>
 					</div>
 					<div class="col-md-3 content contact-img">
-						<a href="../images/contact/instagram.svg" target="_blank">
-							<img src="../images/contact/instagram.svg" alt="instagram">
+						<a href="https://www.instagram.com/origin.types/" target="_blank">
+							<img src="images/contact/instagram.svg" alt="instagram">
 						</a>
 					</div>
 					<div class="col-md-3 content contact-img">
 						<a href="https://api.whatsapp.com/send?phone=6285320200057" target="_blank">
-							<img src="../images/contact/whatsapp.svg" alt="WhatsApp">
+							<img src="images/contact/whatsapp.svg" alt="WhatsApp">
 						</a>
 					</div>
 					
